Added interaction with PlantType
